# Visual-Intelligence

HandWrittenDigitsRecognitions/Python/: ReadMe.txt  handwrittendigit.py
Land-Cover Classification/Matlab/: Land-Cover Classification.docx  README.txt  classification.m  gauss_distribution.m
ObjectRecognition/: README.md
ObjectRecognition/C++/OpenCV/: CMakeLists.txt  Objectrecognition.cpp  Set1Labels.txt  Set2Labels.txt
